Fix contrast ratio issue in dark mode

--- a/hell/assets/style.css
+++ b/hell/assets/style.css
@@ -473,4 +473,8 @@ blockquote {
     background: #FFFFFF;
     color: #000000;
   }
+
+  a:visited {
+    color: #dc6565;
+  }
 }
